fixed spacing in routers file and comments to both css and html files

--- a/CS-155/routers.css
+++ b/CS-155/routers.css
@@ -11,7 +11,7 @@ h1
 p
 {
     font-family: Arial;/*Sets font to Arial*/
-    font-size: 16px;/*Sets font size to 16px*/
+    font-size: 20px;/*Sets font size to 20px*/
     
 
 
